[package]
name = "gmt-cfd-psf"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.31"
colorous = "1.0.16"
crseo = "2.5.1"
gmt-lom = { version = "2.4.2", features = ["apache"] }
gmt_dos-clients_domeseeing = { version = "3.0.2", features = [
  "npyz",
], default-features = false }
image = "0.25.6"
imageproc = "0.25.0"
nalgebra = "0.33"
skyangle = "0.3.1"
thiserror = "2.0.16"
indicatif.workspace = true

[workspace]
members = ["cli", "web"]

[workspace.dependencies]
anyhow = "1.0.99"
indicatif = "0.18.0"
parse-monitors = { git = "https://github.com/rconan/parse-monitors.git", branch = "cfd2025", version = "0.3.2" }

[patch.crates-io]
crseo = { path = "/home/rconan/projects/crseo" }
crseo-sys = { path = "/home/rconan/projects/crseo/sys" }
