[package]
name = "gmt-cfd-psf"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { version = "0.2.31", optional = true }
colorous = { version = "1.0.16", optional = true }
crseo = { version = "2.5.2", optional = true }
gmt-lom = { version = "2.4.2", features = ["apache"], optional = true }
gmt_dos-clients_domeseeing = { version = "3.0.2", features = [
  "npyz",
], default-features = false, optional = true }
image = { version = "0.25.6", optional = true }
imageproc = { version = "0.25.0", optional = true }
nalgebra = { version = "0.33", optional = true }
skyangle = { version = "0.3.1", optional = true }
thiserror = { version = "2.0.16", optional = true }
indicatif = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
cfg-if = "1.0.3"

[workspace]
members = ["cli", "web"]

[workspace.dependencies]
anyhow = "1.0.99"
indicatif = "0.18.0"
parse-monitors = { git = "https://github.com/rconan/parse-monitors.git", branch = "cfd2025", version = "0.3.2" }
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

[features]
ssr = [
  "dep:gmt_dos-clients_domeseeing",
  "dep:crseo",
  "dep:gmt-lom",
  "dep:ab_glyph",
  "dep:colorous",
  "dep:image",
  "dep:imageproc",
  "dep:nalgebra",
  "dep:skyangle",
  "dep:thiserror",
  "dep:indicatif"
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
